// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons/Button Active 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--primary muncher-button--medium muncher-button--active"
    data-title="Active Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Default 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--primary muncher-button--medium"
    data-title="Default Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Disabled 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--primary muncher-button--medium"
    data-title="Disabled Button"
    disabled={true}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Icon Button 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--primary muncher-button--small"
    data-title="Icon Button"
    disabled={false}
    type="button"
  >
    <svg
      className="muncher-icon muncher-icon--small"
      fill="none"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="7"
        x2="17"
        y1="10"
        y2="10"
      />
      <line
        x1="7"
        x2="17"
        y1="14"
        y2="14"
      />
      <line
        x1="7"
        x2="17"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Large 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--primary muncher-button--large"
    data-title="Large Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Nav Button 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--nav muncher-button--primary muncher-button--medium"
    data-title="Nav Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Secondary 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--secondary muncher-button--medium"
    data-title="Secondary Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Small 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--primary muncher-button--small"
    data-title="Small Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Submit 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--primary muncher-button--medium"
    data-title="Submit Button"
    disabled={false}
    type="submit"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Active 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--primary muncher-button--medium muncher-button--active"
      data-title="Active DropDown"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Default 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--primary muncher-button--medium"
      data-title="Default Dropdown"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Disabled 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--primary muncher-button--medium"
      data-title="Disabled DropDown"
      disabled={true}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Icon Dropdown 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--primary muncher-button--small"
      data-title="DropDown with text"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <svg
        className="muncher-icon muncher-icon--small"
        fill="none"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          ry="2"
          width="18"
          x="3"
          y="4"
        />
        <line
          x1="16"
          x2="16"
          y1="2"
          y2="6"
        />
        <line
          x1="8"
          x2="8"
          y1="2"
          y2="6"
        />
        <line
          x1="7"
          x2="17"
          y1="10"
          y2="10"
        />
        <line
          x1="7"
          x2="17"
          y1="14"
          y2="14"
        />
        <line
          x1="7"
          x2="17"
          y1="18"
          y2="18"
        />
      </svg>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Large 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--primary muncher-button--large"
      data-title="Large DropDown"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Nav Drop Down 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--nav muncher-button--primary muncher-button--medium"
      data-title="Nav drop down"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <h4>
        Nav Item
      </h4>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Secondary 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--secondary muncher-button--medium"
      data-title="Secondary DropDown"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Small 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--primary muncher-button--small"
      data-title="Small DropDown"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button With Text 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--primary muncher-button--medium"
      data-title="DropDown with text"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        Text drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Data Display/Badge Default 1`] = `
<div
  style={
    Object {
      "maxWidth": "7rem",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-badge"
  >
    Muncher  
    <svg
      className="muncher-icon muncher-icon--small"
      fill="none"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="7"
        x2="17"
        y1="10"
        y2="10"
      />
      <line
        x1="7"
        x2="17"
        y1="14"
        y2="14"
      />
      <line
        x1="7"
        x2="17"
        y1="18"
        y2="18"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Data Display/Pill Default 1`] = `
<div
  className="muncher-pill"
>
  <div
    className="close"
    onClick={[Function]}
  >
    <svg
      className="muncher-icon muncher-icon--small"
      fill="none"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="15"
        x2="9"
        y1="9"
        y2="15"
      />
      <line
        x1="9"
        x2="15"
        y1="9"
        y2="15"
      />
    </svg>
  </div>
  <div
    className="content"
  >
     
     Item 1
  </div>
</div>
`;

exports[`Storyshots Feedback/Backdrop Default 1`] = `
<div
  className="muncher-backdrop"
  onClick={[Function]}
/>
`;

exports[`Storyshots Feedback/Modal Default 1`] = `
Array [
  <div
    className="muncher-backdrop"
  />,
  <div
    className="muncher-modal"
    style={
      Object {
        "opacity": "1",
        "transform": "translateY(0)",
      }
    }
  >
    <h2>
      Modal title
    </h2>
    <section>
      Modal Mody
    </section>
  </div>,
]
`;

exports[`Storyshots Input/Checkbox Default 1`] = `
<div
  className="muncher--checkbox"
>
  <input
    name="muncher-checkbox"
    type="checkbox"
  />
  <label
    htmlFor="muncher-checkbox"
  >
     
     Item 1
  </label>
</div>
`;

exports[`Storyshots Input/Input Color 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="Type your query"
  type="color"
/>
`;

exports[`Storyshots Input/Input Date 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="Type your query"
  type="date"
/>
`;

exports[`Storyshots Input/Input Date Time 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="Type your query"
  type="datetime-local"
/>
`;

exports[`Storyshots Input/Input Default 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="Type your query"
  type="text"
/>
`;

exports[`Storyshots Input/Input Email 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="Type your query"
  type="email"
/>
`;

exports[`Storyshots Input/Input File 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="File"
  type="file"
/>
`;

exports[`Storyshots Input/Input Month 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="Type your query"
  type="month"
/>
`;

exports[`Storyshots Input/Input Number 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="Number"
  type="number"
/>
`;

exports[`Storyshots Input/Input Password 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="Type password"
  type="password"
/>
`;

exports[`Storyshots Input/Input Range 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="Type password"
  type="range"
/>
`;

exports[`Storyshots Input/Input Search 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  type="text"
/>
`;

exports[`Storyshots Input/Input Tel 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="Type your query"
  type="tel"
/>
`;

exports[`Storyshots Input/Input Time 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="Type your query"
  type="time"
/>
`;

exports[`Storyshots Input/Input Url 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="Type your query"
  type="url"
/>
`;

exports[`Storyshots Input/Input Week 1`] = `
<input
  autoComplete="off"
  className="muncher-input"
  name="query"
  placeholder="Type your query"
  type="week"
/>
`;

exports[`Storyshots Input/Input With Focus 1`] = `
<input
  autoComplete="off"
  autoFocus={true}
  className="muncher-input"
  name="query"
  placeholder="Type your query"
  type="text"
/>
`;

exports[`Storyshots Input/Radio Default 1`] = `
<div
  className="muncher--checkbox"
>
  <input
    name="muncher-radio"
    type="checkbox"
  />
  <label
    htmlFor="muncher-radio"
  >
     
     Item 1
  </label>
</div>
`;

exports[`Storyshots Input/Range Slider Default 1`] = `
<div
  className="muncher-slider"
>
  <div
    className="rc-slider"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="rc-slider-rail"
      style={Object {}}
    />
    <div
      className="rc-slider-track rc-slider-track-1"
      style={
        Object {
          "left": "8.256880733944955%",
          "right": "auto",
          "width": "82.56880733944953%",
        }
      }
    />
    <div
      className="rc-slider-step"
    />
    <div
      aria-disabled={false}
      aria-valuemax={1100}
      aria-valuemin={10}
      aria-valuenow={100}
      className="rc-slider-handle rc-slider-handle-1"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="slider"
      style={
        Object {
          "left": "8.256880733944955%",
          "right": "auto",
          "transform": "translateX(-50%)",
        }
      }
      tabIndex={0}
    />
    <div
      aria-disabled={false}
      aria-valuemax={1100}
      aria-valuemin={10}
      aria-valuenow={1000}
      className="rc-slider-handle rc-slider-handle-2"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="slider"
      style={
        Object {
          "left": "90.82568807339449%",
          "right": "auto",
          "transform": "translateX(-50%)",
        }
      }
      tabIndex={0}
    />
    <div
      className="rc-slider-mark"
    />
  </div>
  This is a range slider
</div>
`;

exports[`Storyshots Input/Text Input Default 1`] = `
<input
  autoComplete="off"
  className="muncher-text-input"
  name="query"
  placeholder="Type your query"
  type="text"
/>
`;

exports[`Storyshots Input/Text Input Dropdown Default 1`] = `
<div
  className="muncher-input-drop-down"
>
  <input
    autoComplete="off"
    autoFocus={true}
    className="muncher-text-input"
    name="query"
    onChange={[Function]}
    placeholder="Start typing.."
    type="text"
  />
  
</div>
`;

exports[`Storyshots Input/Text Input With Focus 1`] = `
<input
  autoComplete="off"
  autoFocus={true}
  className="muncher-text-input"
  name="query"
  placeholder="Type your query"
  type="text"
/>
`;

exports[`Storyshots Utils/Spinner Default 1`] = `
<div
  className="muncher-spinner"
/>
`;

exports[`Storyshots Utils/Star Default 1`] = `
<span
  className="muncher-star "
  style={
    Object {
      "--r": 3.4,
    }
  }
/>
`;

exports[`Storyshots Visual/Icons Dark 1`] = `
<svg
  className="muncher-icon muncher-icon--medium"
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth={2}
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="18"
    rx="2"
    ry="2"
    width="18"
    x="3"
    y="4"
  />
  <line
    x1="16"
    x2="16"
    y1="2"
    y2="6"
  />
  <line
    x1="8"
    x2="8"
    y1="2"
    y2="6"
  />
  <line
    x1="7"
    x2="17"
    y1="10"
    y2="10"
  />
  <line
    x1="7"
    x2="17"
    y1="14"
    y2="14"
  />
  <line
    x1="7"
    x2="17"
    y1="18"
    y2="18"
  />
</svg>
`;

exports[`Storyshots Visual/Icons Default 1`] = `
<svg
  className="muncher-icon muncher-icon--small"
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth={2}
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="18"
    rx="2"
    ry="2"
    width="18"
    x="3"
    y="4"
  />
  <line
    x1="16"
    x2="16"
    y1="2"
    y2="6"
  />
  <line
    x1="8"
    x2="8"
    y1="2"
    y2="6"
  />
  <line
    x1="7"
    x2="17"
    y1="10"
    y2="10"
  />
  <line
    x1="7"
    x2="17"
    y1="14"
    y2="14"
  />
  <line
    x1="7"
    x2="17"
    y1="18"
    y2="18"
  />
</svg>
`;

exports[`Storyshots Visual/Icons Large 1`] = `
<svg
  className="muncher-icon muncher-icon--large"
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth={2}
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="18"
    rx="2"
    ry="2"
    width="18"
    x="3"
    y="4"
  />
  <line
    x1="16"
    x2="16"
    y1="2"
    y2="6"
  />
  <line
    x1="8"
    x2="8"
    y1="2"
    y2="6"
  />
  <line
    x1="7"
    x2="17"
    y1="10"
    y2="10"
  />
  <line
    x1="7"
    x2="17"
    y1="14"
    y2="14"
  />
  <line
    x1="7"
    x2="17"
    y1="18"
    y2="18"
  />
</svg>
`;

exports[`Storyshots Visual/Icons Medium 1`] = `
<svg
  className="muncher-icon muncher-icon--medium"
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth={2}
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="18"
    rx="2"
    ry="2"
    width="18"
    x="3"
    y="4"
  />
  <line
    x1="16"
    x2="16"
    y1="2"
    y2="6"
  />
  <line
    x1="8"
    x2="8"
    y1="2"
    y2="6"
  />
  <line
    x1="7"
    x2="17"
    y1="10"
    y2="10"
  />
  <line
    x1="7"
    x2="17"
    y1="14"
    y2="14"
  />
  <line
    x1="7"
    x2="17"
    y1="18"
    y2="18"
  />
</svg>
`;
